fix table of contents vertical spacing on bottom scroll position

--- a/src/css/blocks/_table-of-contents.scss
+++ b/src/css/blocks/_table-of-contents.scss
@@ -5,7 +5,7 @@
 ////
 
 .toc {
-	margin-block-start: var(--size-gap);
+	padding-block: var(--size-gap);
 
 	@media print {
 		display: none;
